# ecat3

./: .gitignore  .gitmodules  BUILD.md  CONFIG.md  HISTORY.md  LINKS.md  MANUAL.md  README.md
.build/: .gitignore  build-linux.sh  build-macos.sh  build-win-7.bat  build-win-i386.bat  build-win-latest.bat  build-win-mingw-latest.bat  build-win-msvc-latest.bat  build-win.bat  macos_build_qt_universal.sh  update_translations.bat  vars-mingw-latest.cmd  vars-mingw-qt5.15.cmd  vars-mingw-qt5.6.cmd  vars-mingw.cmd  vars-msvc-latest.cmd  vars-msvc.cmd
.build/.linux/ecat3.AppDir/usr/share/applications/: ecat3.desktop
.build/.macos/: make_icon.py
deploy/: .ecat.ini  COPYRIGHT.TXT  ecat.ini
deploy/computers/: default.md  test.cfg
deploy/computers/agat/: 6502-test.cfg  Agat-7-840-pp.cfg  Agat-7-840-pp.md  Agat-7-840.cfg  Agat-7-840.md  Agat-7-max.cfg  Agat-7-max.md  Agat-7.cfg  Agat-7.md  Agat-9-pp.cfg  Agat-9-pp.md  Agat-9.cfg  Agat-9.md  agat.map
deploy/computers/agat/files/: A7-monitor.rom  A9-D03.rom  A9-D14.rom  A9-fnt.rom  A9-monitor.rom  Agat9mem.xlsx  agat_test.rom
deploy/computers/apogey/: Apogey.cfg  Apogey.md  Apogey.txt
deploy/computers/irisha/: Irisha-gmd70.cfg  Irisha-gmd70.md  Irisha-kngmd.cfg  Irisha-kngmd.md  Irisha.cfg  Irisha.md
deploy/computers/irisha/files/: extra.rom  irisha.map  irisha.rom
deploy/computers/mikrosha/: Mikrosha.cfg  Mikrosha.md  descr.txt
deploy/computers/mikrosha/files/: mikrosha.kbd
deploy/computers/orion-128/: Orion-128-Z80-zexall.cfg  Orion-128-Z80-zexall.md  Orion-128-Z80.cfg  Orion-128-Z80.md  Orion-128-m1-z80.cfg  Orion-128-m1.cfg  Orion-128-m1.md  Orion-128-m1.txt  Orion-128-m2.cfg  Orion-128-m3.cfg  Orion-128-m3.md  Orion-128-t256.cfg  Orion-128-tZ80.cfg  Orion-128-tZ80.md  Orion-128.cfg  Orion-128.md  i8080test.hex
deploy/computers/radio-86rk/: Radio-86rk.cfg  Radio-86rk.md  Spektr001.cfg  Spektr001.md
deploy/data/: 6502.dis  6502instr.xls  65c02.dis  65c02instr.xls  description.css  i8080.dis  koi8.chr  radio-86rk.chr  rk.kbd  z80.dis  z80instr.xls
deploy/software/agat/: CW.nib  GAMES.DSK  GROOM.dsk  IKP7_140.dsk  IKP7_140.mfm  IKP7_840.dsk  IKP_7.DSK  IKP_7.mfm  INIT_HELLO840[a7].dsk  LODE.NIB  Shkolnica_ver3.dsk  TESTOZU7_140.dsk  TESTOZU7_140.mfm  TestCom7_140.dsk  TestCom7_140.mfm  TestCom7_140.nic  TestCom7_840.dsk  WM.nib  ikp1-16414.dsk  ikp2-19176.dsk
deploy/software/irisha/: 02.cpm  disk5.gmd
deploy/software/orion-128/: BOOT$.BRU  Disk2.ODI  RusEmulatotsRu01.odi  TETRIS$.BRU  zexall.odi
src/: CMakeLists.txt  eCat3.pro  globals.h  globals.h.in  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qt_utils.cpp  qt_utils.h  resources.qrc
src/dialogs/: aboutdlg.ui  debugdialog.cpp  debugdialog.h  debugwindow.cpp  debugwindow.h  debugwindow.ui  dialogs.h  disasmarea.cpp  disasmarea.h  dosframe.cpp  dosframe.h  dumparea.cpp  dumparea.h  dumpwindow.cpp  dumpwindow.h  dumpwindow.ui  genericdbgwnd.cpp  genericdbgwnd.h  hexeditorline.cpp  hexeditorline.h  i8255window.cpp  i8255window.h  i8255window.ui  keyvaluearea.cpp  keyvaluearea.h  mmwindow.cpp  mmwindow.h  mmwindow.ui  openconfigwindow.cpp  openconfigwindow.h  openconfigwindow.ui  portwindow.cpp  portwindow.h  portwindow.ui  taperecorder.cpp  taperecorder.h  taperecorder.ui
src/emulator/: config.cpp  config.h  core.cpp  core.h  debug.h  disasm.cpp  disasm.h  emulator.cpp  emulator.h  files.cpp  files.h  logger.h  renderer.h  result.h  thread_compat.h  utils.cpp  utils.h
src/emulator/audio/: audio_driver.h  audio_driver_miniaudio.cpp  audio_driver_miniaudio.h  audio_driver_sdl.cpp  audio_driver_sdl.h
src/emulator/devices/common/: fdd.cpp  fdd.h  generator.cpp  generator.h  gmd70.cpp  gmd70.h  i8251.cpp  i8251.h  i8253.cpp  i8253.h  i8255.cpp  i8255.h  i8257.h  i8259.cpp  i8259.h  i8275.h  i8275display.h  keyboard.cpp  keyboard.h  mapkeyboard.cpp  mapkeyboard.h  page_mapper.cpp  page_mapper.h  ram_address.cpp  ram_address.h  raster_display.cpp  raster_display.h  register.cpp  register.h  scankeyboard.cpp  scankeyboard.h  sound.cpp  sound.h  speaker.cpp  speaker.h  tape.cpp  tape.h  wd1793.cpp  wd1793.h
src/emulator/devices/cpu/: 6502.cpp  6502.h  6502core.cpp  6502core.h  cpu_utils.h  cpulogger.cpp  cpulogger.h  i8080.cpp  i8080.h  i8080_context.h  i8080core.cpp  i8080core.h  i8080core2.cpp  i8080core2.h  z80.cpp  z80.h  z80_context.h  z80core.cpp  z80core.h
src/emulator/devices/specific/: agat_7_display.cpp  agat_7_display.h  agat_9_display.cpp  agat_9_display.h  agat_9_mapper.cpp  agat_9_mapper.h  agat_common.h  agat_display.cpp  agat_display.h  agat_fdc140.cpp  agat_fdc140.h  agat_fdc840.cpp  agat_fdc840.h  irisha_display.cpp  irisha_display.h  o128display.cpp  o128display.h
src/libs/: audio_filters.h  crc16.cpp  crc16.h  ini_wrapper.cpp  ini_wrapper.h  mfm_formats.h  mfm_tools.cpp  mfm_tools.h  sdl_wrapper.h
src/renderers/: GLWidget.cpp  GLWidget.h  renderer_opengl.h  renderer_qt.h  renderer_sdl2.h
src/resources/files/: Info.plist  ecat.icns
src/tests/: 8080exe.asm  8080pre.asm  LD8_XY_test  LD8_XY_test.asm  LD8_XY_test.hex  build.bat  i8080.asm  i8253_test.asm  i8253_test.hex  zexall.asm
src/tests/6502/: 6502_decimal_test.a65  6502_decimal_test.hex  6502_decimal_test.lst  6502_functional_test.a65  6502_functional_test.hex  6502_functional_test.lst  6502_interrupt_test.lst  agat7_irqs_test.hex  agat7_irqs_test.txt  build.bat  sound_test.a65
src/tests/zout/: 8080exe.cim  8080pre.cim  zexall.hex
src/translations/: en_US.ts  en_us.ts  ru_RU.qm  ru_RU.ts  ru_ru.ts
src/wasm/: CMakeLists.txt  build_wasm.bat  build_wasm.sh  ecat_wasm.js  package_machines.py  renderer_wasm.cpp  renderer_wasm.h  serve_wasm.py  shell.html  wasm_main.cpp
